# github-inventory

./: .gitignore  NOTES.md  README.md  build.sh  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: jest-coverage.yml  jest.yml
_OLD_/: package.json
_OLD_/__tests__/pages/: page.test.js
_OLD_/__tests__/pages/__snapshots__/: page.snapshot.js.snap
_OLD_/app/repo-table/: page.js
_OLD_/components/ui/: badge.tsx  card.tsx  skeleton.tsx
_OLD_/docs/: helpful-links.md
_OLD_/features/step_definitions/: stepdefs.js
_OLD_/threat-modeling/: sample.md
__tests__/pages/: page.snapshot.js
app/: page.js
app/repo-table/: page.js
app/repo/[repo]/: page.tsx
components/: repo-detail.tsx  view-detail-display.js  view-detail-modal.js
database/: manager.py
docs/: data-flow.drawio  dev-docs.md
features/: call_api.feature
github/: gh_actions.py  repos.py
github/models/: owner.py  repository.py
src/: main.py
src/github_cli/: __init__.py  __main__.py  main.py  repos.py
src/github_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/github_cli/actions/: refresh.py  repos.py
src/github_cli/database/: util.py
src/github_cli/models/: repo_permissions.py  repository.py  workflow.py
src/github_cli/storage/: db.py
src/github_cli/utilities/: file_utils.py
threat-modeling/: over-posting.md
