[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-cli"
version = "0.0.1"
description = "Manage your GitHub inventory"
readme = "README.md"
requires-python = ">=3.11"
# license = "MIT"
authors = [{ name = "Darrien Rushing" }]
# We declare that deps come from elsewhere:
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }  # optional

[project.urls]
Homepage = "https://github.com/meddlin/github-inventory"

# creates the `github` shell command
[project.scripts]
github = "github_cli.main:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false  # keep wheels lean unless you add data files explicitly

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]  # package name patterns (not file globs)